Start cleaning the LaTeX style for the documentation
* configuration.sty: Add header and footer comments.  Add an Emacs
  local variables section for using fundamental mode and tab-width for
  the file.  I am not using LaTeX mode to edit the file because it is
  not suitable for expl3 syntax.

--- a/configuration.sty
+++ b/configuration.sty
@@ -1,3 +1,5 @@
+%%% LaTeX style file for the documentation of the configuration file
+
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesExplPackage
   {project}
@@ -389,3 +391,10 @@
   {
     \emph {#1}
   }
+
+%% End of file
+
+%% Local Variables:
+%% mode: fundamental
+%% tab-width: 2
+%% End:
