Clean the preamble of the LaTeX style file
* configuration.sty: Replace outdated information with the current
  information.

--- a/configuration.sty
+++ b/configuration.sty
@@ -1,11 +1,17 @@
 %%% LaTeX style file for the documentation of the configuration file
 
+%% ===================================================================
+%% Preamble
+%% ===================================================================
+
 \NeedsTeXFormat{LaTeX2e}
+
 \ProvidesExplPackage
-  {project}
-  {2023-03-06}
+  {configuration}
+  {2023-10-01}
   {0.1.0}
-  {LaTeX style for project documentation}
+  {LaTeX style for documentation of NixOS configuration}
+
 \RequirePackage { newpxtext }
 \RequirePackage [ scaled = 0.95 ] { inconsolata }
 \RequirePackage [ leqno ] { amsmath }
