Clean the fonts setup of the LaTeX style file
* configuration.sty: Stop loading amsmath, amsthm, and thmtools
  because there is not much mathematical typesetting in the current
  document.  Keep newpxmath in case some basic mathematical
  typesetting is needed.  Remove the vvarbb option of newpxmath
  because I am not going to use blackboard bold symbols here.  Load
  fontenc because it is needed for the guillemets around filenames.

--- a/configuration.sty
+++ b/configuration.sty
@@ -12,12 +12,15 @@
   {0.1.0}
   {LaTeX style for documentation of NixOS configuration}
 
+%% ===================================================================
+%% Fonts
+%% ===================================================================
+
+\RequirePackage [ T1 ] { fontenc}
 \RequirePackage { newpxtext }
 \RequirePackage [ scaled = 0.95 ] { inconsolata }
-\RequirePackage [ leqno ] { amsmath }
-\RequirePackage { amsthm }
-\RequirePackage { thmtools }
-\RequirePackage [ vvarbb ] { newpxmath }
+\RequirePackage { newpxmath }
+
 \RequirePackage [
   paperheight = 197.0424 mm,
   paperwidth = 147.7818 mm,
