Clean the table of contents code for the documentation
* configuration.sty: Change the page style of the table of contents
  pages to the `fancy' page style that is used for the ordinary pages.
  Use a hook to start a new page after the table of contents, instead
  of using a \clearpage command after \tableofcontents in the
  document.

--- a/configuration.sty
+++ b/configuration.sty
@@ -85,14 +85,23 @@
     \clist_use:cn { l_tmpb_clist } { , ~ }
   }
 
+%% ===================================================================
+%% Table of contents
+%% ===================================================================
+
+\RequirePackage { tocloft }
+
+\tocloftpagestyle { fancy }
+
+\AddToHook { cmd / tableofcontents / after }
+  { \clearpage }
+
   {
       {
       }
   }
   {
   }
-\RequirePackage { tocloft }
-\tocloftpagestyle { empty }
 \NewDocumentCommand \notessection
   { O{Notes} }
   {
