Add a header for the keywords part of LaTeX style file
* configuration.sty: Add a header comment for the keywords part of the
  code.

--- a/configuration.sty
+++ b/configuration.sty
@@ -66,6 +66,10 @@
     \stepcounter { page }
   }
 
+%% ===================================================================
+%% Keywords
+%% ===================================================================
+
 \NewDocumentCommand \ghtopics
   { m }
   {
