Clean the cross-references part of the LaTeX style file
* configuration.sty: Reformat the cross-references part of the file.

--- a/configuration.sty
+++ b/configuration.sty
@@ -192,6 +192,12 @@
   }
 
 %% ===================================================================
+%% Cross-references
+%% ===================================================================
+
+\RequirePackage { cleveref }
+
+%% ===================================================================
 %% Noweb
 %% ===================================================================
 
@@ -290,7 +296,6 @@
     sharp ~ corners,
     size = small
   }
-\RequirePackage { cleveref }
 
 \NewDocumentCommand \firstterm
   { m }
