Add some references
* configuration.bib: Add references to the NixOS and Home Manager man
  pages.

--- a/configuration.bib
+++ b/configuration.bib
@@ -21,6 +21,12 @@
   urldate      = {2023-04-25}
 }
 
+@Manual{bib:5ndx9q4j,
+  author       = {Dolstra, Eelco and {The Nixpkgs/NixOS Contributors}},
+  title        = {configuration.nix(5)},
+  date         = 2022
+}
+
 @Misc{bib:6zaybbon,
   author       = {{Apple Inc.}},
   title        = {iPad Air \textendash\ technical specifications},
@@ -135,6 +141,12 @@
   date         = 2022,
   url          = {http://mirrors.ctan.org/macros/latex/contrib/l3kernel/expl3.pdf},
   urldate      = {2023-04-25}
+}
+
+@Manual{bib:vxfvl1fo,
+  author       = {{Home Manager Contributors}},
+  title        = {home-configuration.nix(5)},
+  date         = 2022
 }
 
 @Software{bib:x4lpeuud,
