Hyphenate bibliography URLs more
* configuration.sty: Ease the hyphenation of URLs in bibliography
  items at lower case letters in the URLs.

--- a/configuration.sty
+++ b/configuration.sty
@@ -115,6 +115,9 @@
   ]
   { biblatex }
 
+\setcounter { biburllcpenalty }
+  { 9000 }
+
 \renewbibmacro { pageref }
   {
     \iflistundef { pageref }
