Add some bibliography entries
* configuration.bib: Add some bibliography entries.  Rewrite corporate
  authors of the form `{The Foo Bar}' as `{Foo Bar}, The' so that they
  appear at the right place in the sorted bibliography.

--- a/configuration.bib
+++ b/configuration.bib
@@ -22,7 +22,7 @@
 }
 
 @Manual{bib:5ndx9q4j,
-  author       = {Dolstra, Eelco and {The Nixpkgs/NixOS Contributors}},
+  author       = {Dolstra, Eelco and {Nixpkgs/NixOS Contributors}, The},
   title        = {configuration.nix(5)},
   date         = 2022
 }
@@ -43,12 +43,36 @@
   urldate      = {2023-04-25}
 }
 
+@Online{bib:872u2noz,
+  author       = {{UPower Contributors}},
+  title        = {UPower.conf},
+  date         = 2023,
+  url          = {https://gitlab.freedesktop.org/upower/upower/-/blob/029651a96dfc8e8e1dc6eca79bd3bf23d3aeb5ce/etc/UPower.conf},
+  urldate      = {2023-10-16}
+}
+
 @Manual{bib:8ouv42ct,
   author       = {Michael Sharpe},
   title        = {New PX font package},
   date         = 2021,
   url          = {http://mirrors.ctan.org/fonts/newpx/doc/newpxdoc.pdf},
   urldate      = {2023-04-25}
+}
+
+@Software{bib:abdahnqa,
+  author       = {{NetworkManager Team}, The},
+  title        = {NetworkManager},
+  date         = 2023,
+  url          = {https://networkmanager.dev/},
+  urldate      = {2023-10-14}
+}
+
+@Online{bib:d08j7tjg,
+  author       = {Antonio Piraino},
+  title        = {Power suspend on Ubuntu with an external monitor},
+  year         = 2018,
+  url          = {https://apiraino.github.io/ubuntu-gnome-power/},
+  urldate      = {2023-10-16}
 }
 
 @Book{bib:dmegt0nb,
@@ -79,6 +103,14 @@
   publisher    = {Addison-Wesley Publishing Company}
 }
 
+@Online{bib:kiy97d4i,
+  author       = {{Wikipedia Contributors}},
+  title        = {Internationalization and localization \textemdash\ Wikipedia, The Free Encyclopedia},
+  year         = 2023,
+  url          = {https://en.wikipedia.org/w/index.php?title=Internationalization_and_localization&oldid=1178495939},
+  urldate      = {2023-10-14}
+}
+
 @Manual{bib:kr1beubb,
   author       = {Jérémie Dimino},
   title        = {Welcome to Dune’s documentation!},
@@ -103,12 +135,42 @@
   urldate      = {2023-04-25}
 }
 
+@Online{bib:nhg983t7,
+  author       = {{Wikipedia Contributors}},
+  title        = {Locale (computer software) \textemdash\ Wikipedia, The Free Encyclopedia},
+  year         = 2023,
+  url          = {https://en.wikipedia.org/w/index.php?title=Locale_(computer_software)&oldid=1161346068},
+  urldate      = {2023-10-14}
+}
+
+@Manual{bib:p9hb002v,
+  author       = {{Home Manager Contributors}},
+  title        = {Home Manager manual},
+  date         = 2023,
+  url          = {https://nix-community.github.io/home-manager/},
+  urldate      = {2023-03-18}
+}
+
+@Manual{bib:p9pioc5i,
+  author       = {{Systemd Contributors}},
+  title        = {logind.conf(5)},
+  date         = 2023
+}
+
 @Manual{bib:q7nwwdbe,
   author       = {{Nix Project Contributors}},
   title        = {Nix reference manual},
   date         = 2023,
   url          = {https://nixos.org/manual/nix/stable/},
   urldate      = {2023-03-16}
+}
+
+@Online{bib:rezy6nz0,
+  author       = {{Wikipedia Contributors}},
+  title        = {Bootloader \textemdash\ Wikipedia, The Free Encyclopedia},
+  year         = 2023,
+  url          = {https://en.wikipedia.org/w/index.php?title=Bootloader&oldid=1171315144},
+  urldate      = {2023-10-16}
 }
 
 @Manual{bib:rgn083uu,
@@ -155,6 +217,12 @@
   date         = 2023,
   url          = {https://direnv.net/},
   urldate      = {2023-04-22}
+}
+
+@Manual{bib:x9v7o65s,
+  author       = {{Systemd Contributors}},
+  title        = {systemd-logind(8)},
+  date         = 2023
 }
 
 @Book{bib:zp078m5d,
