Add text to the introduction
* configuration.nw: Add text to the introduction.  Add dummy text to
  empty subsections, and beginnings of sections which do not have any
  introductory paragraphs.  Add the concluding section `Coda'.

* configuration.sty: Load the `kantlipsum' package for producing dummy
  text.

* configuration.bib: Add the entry for the NixOS manual.  Add a
  subtitle to the entry for the Nixpkgs manual.

--- a/configuration.bib
+++ b/configuration.bib
@@ -51,6 +51,15 @@
   urldate      = {2023-10-16}
 }
 
+@Manual{bib:8n2stl3b,
+  author       = {{Nix Project Contributors}},
+  title        = {NixOS manual},
+  date         = 2023,
+  subtitle     = {Version 23.05},
+  url          = {https://nixos.org/manual/nixos/stable/},
+  urldate      = {2023-03-16}
+}
+
 @Manual{bib:8ouv42ct,
   author       = {Michael Sharpe},
   title        = {New PX font package},
@@ -123,6 +132,7 @@
   author       = {{Nix Project Contributors}},
   title        = {Nixpkgs manual},
   date         = 2023,
+  subtitle     = {Version 23.05},
   url          = {https://nixos.org/manual/nixpkgs/stable/},
   urldate      = {2023-03-16}
 }
