--- a/configuration.sty
+++ b/configuration.sty
@@ -326,6 +326,13 @@
     \emph {#1}
   }
 
+%% ===================================================================
+%% Dummy text
+%% ===================================================================
+
+\RequirePackage { kantlipsum }
+
+
 %% End of file
 
 %% Local Variables:
