Change the LaTeX package for dummy text
* configuration.sty:
* configuration.nw:
Use the LaTeX package lipsum instead of kantlipsum for producing dummy
text that I am using as placeholders in the documentation.

--- a/configuration.sty
+++ b/configuration.sty
@@ -331,7 +331,7 @@
 %% Dummy text
 %% ===================================================================
 
-\RequirePackage { kantlipsum }
+\RequirePackage { lipsum }
 
 
 %% End of file
