Complete the settings of keyboard shortcuts
* configuration.nw: Complete the subsection on keyboard shortcuts.

* configuration.bib: Add a bibliographic entry for my ThinkPad manual.

--- a/configuration.bib
+++ b/configuration.bib
@@ -1,5 +1,11 @@
 %% -*- fill-column: 1000; -*-
 
+@Manual{bib:17rt0kuy,
+  author       = {Lenovo},
+  title        = {ThinkPad P15v Gen 1 and T15p Gen 1 User Guide},
+  date         = 2020
+}
+
 @Article{bib:199mna1w,
   author       = {Norman Ramsey},
   title        = {Literate programming simplified},
