Add the settings for notifications on locked screen
* configuration.nw: Add a subsection on the configuration of
  notifications when the screen is locked.

* configuration.bib: Add a bibliographic entry for the GNOME project,
  and for a Web site about the dconf setting show-in-lock-screen.

--- a/configuration.bib
+++ b/configuration.bib
@@ -108,6 +108,14 @@
   publisher    = {Addison-Wesley}
 }
 
+@Online{bib:g6po8v4w,
+  author       = {{GNOME Project}, The},
+  title        = {GNOME \textemdash\ Simple, beautiful, elegant},
+  date         = 2023,
+  url          = {https://www.gnome.org/},
+  urldate      = {2023-12-28}
+}
+
 @Book{bib:h6qjx0z8,
   author       = {Peter Wilson},
   title        = {A few notes on book design},
@@ -149,6 +157,14 @@
   subtitle     = {Version 23.05},
   url          = {https://nixos.org/manual/nixpkgs/stable/},
   urldate      = {2023-03-16}
+}
+
+@Online{bib:m73nxfks,
+  author       = {VITUX},
+  title        = {Turn off/disable notifications on your Ubuntu’s lock screen},
+  date         = 2023,
+  url          = {https://vitux.com/turn-off-disable-notifications-on-your-ubuntus-lock-screen/},
+  urldate      = {2023-12-28}
 }
 
 @Manual{bib:mkhhh0pm,
